[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_egui = "0.20"
bevy_asset_loader = { version = "0.16" }
bevy_ecs_ldtk = "0.6"
bevy_rapier2d = "0.21"
bevy-inspector-egui = "0.18"